<resources>
    <string name="app_name">LoginPractice</string>
    <string name="input">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="password">密码：</string>
    <string name="account">账号：</string>
    <string name="loginButton">登录</string>
    <string name="admin">admin</string>
    <string name="md5">299132688689127175738334524183350839358</string>
    <string name="remember">记住密码</string>
    <string name="wechat">聊天</string>
    <string name="contacts">档案</string>
    <string name="find">发现</string>
    <string name="me">我</string>
    <string name="portrait">特工肖像</string>
    <string name="username">特工名称</string>
    <string name="logout">退出登录</string>
    <string name="iron_man_intro">
        托尼·史塔克（Tony Stark）即钢铁侠（Iron Man），是美国漫威漫画旗下的超级英雄，初次登场于《悬疑故事》（Tales of Suspense）第39期（1963年3月），由斯坦·李、赖瑞·理柏、唐·赫克和杰克·科比联合创造。
        全名安东尼·爱德华·托尼·史塔克（Anthony Edward “Tony” Stark），是史塔克工业的董事长，因一场阴谋绑架中，胸部遭弹片穿入，生命危在旦夕，为了挽救自己的性命，在同被绑架的物理学家殷森（Yin Sen）的协助下
        托尼造出了防止弹片侵入心脏的方舟反应炉从而逃过一劫，利用方舟反应炉作为能量运转的来源，暗中制造了一套装甲杀出重围后逃脱，之后托尼参与创立复仇者联盟。
    </string>
    <string name="iron_man_power">
        发明：除了装甲赋予他的能力外，发明天才斯塔克仍不断的创造出新的科技并不停的改良现有的科技。这样的特质延续至当他遇见强敌与危机时，让他可以以不寻常但有效的运用他的装甲。\n\n
        管理：他在商界也极受尊崇，在提到有关经济的议题时能够吸引人们的注意力。他对属下极为忠实，但同时也要求属下对他有同等的忠实度，而且拥有最高标准的企业伦理。他曾两度立即开除与毁灭博士和邪恶组织A.I.M进行高获利非法交易的员工。\n\n
        搏斗：斯塔克以身为未来主义者而自豪。当斯塔克一度无法使用他的装甲时，他曾要求美国队长，黑豹，黑寡妇，上气等人的训练他战斗技巧，因此他的体能十分强健。可以徒手击败五名斯克鲁尔士兵或是与几个忍者赤身对抗，曾经将一队恐怖分子消灭。\n\n
        动力来源：钢铁侠的力量与能力来自于他穿着的先进动力装甲。此装甲由原本笨重的铁甲装甲慢慢进化更新成分子重整排序后的结晶铁经磁场强化后覆盖于钛金属等数层其他金属上，形成一个有韧性但又极度坚实且能提供极高防御作用的外壳。\n
        铁甲装甲赋予斯塔克超人力量及飞行能力，斯塔克还加装了喷射推进器足以让他拖着一整列火车前进；其能源来自多种来源的总和，包括太阳能，电池，以及内建以吸收贝塔粒子为燃料的发电机。\n\n
        吸收转换：铁甲装甲还可以吸收周遭的能源如热量与动能并转化成电力，甚至可以直接吸收电力来为电池进行充电。\n\n
        操控系统：借由头盔中神经机械学界面读取斯塔克的脑波进行运作。斯塔克自行设计的具人工智能操控系统的高科技电脑名为贾维斯（Jarvis），利用内部与外部的感应器能提供战略资讯与机甲的即时状态报告。\n\n
        武器系统：铁甲装的也随着时间不断的演进，但钢铁侠的制式攻击武器一直都是其经由手套掌心发射出的冲击光束（Repulsor Ray）。内建在各代装甲中的武器包括了由胸口发射的单束光炮（Uni-Beam）；随着运行吸收周围动能的脉冲光，
        运行距离越远就越强大；电磁冲波发射器；以及能量护盾。其他的功能包括了发射极冻光线（Ultra-Freon），制造与操控磁场，音波炮，用来制造诱饵的全像制造器。还有，如果导弹来了的话，可以射出红外线干扰球，将导弹提前爆炸。\n\n
        维生系统：除此之外，铁甲装还可以完全的与外界隔离，让钢铁侠可在真空或海底行动，并可隔绝放射线。
    </string>
    <string name="captain_america_intro">
        美国队长（Captain America）是美国漫威漫画旗下的超级英雄，初次登场于《美国队长》（Captain America Comics）第1期（1941年3月），由乔·西蒙和杰克·科比联合创造，被视为美国精神的象征。
        本名史蒂文·“史蒂夫”·罗杰斯（Steven “Steve” Rogers），1918年7月4日出生于美国纽约布鲁克林区，原本是一名身体瘦弱的年轻人，在接受美国政府的改造后变成了“超级士兵”，使其力量、速度、耐力等各项体能都远超于常人，
        且还被美国政府赋予了由世界上最坚硬的金属之一振金制成的盾牌，从此史蒂夫以美国队长的身份，在二战中立下赫赫战功。\n\n
        后来在二战尾声的一次行动中，美国队长与宿敌红骷髅展开激战，并掉入大海之中被冰封近70年，直到被神盾局发现并解冻后才加入了复仇者联盟，此后在美国队长的领导下，复仇者联盟出生入死，赢得一次又一次近乎不可能的胜利。
    </string>
    <string name="captain_america_power">
        美国队长的力量，感官，反应能力等身体机能已经达到了人类所能达到的潜能极限、并拥有非凡的领导才能；超强的武术格斗技巧，主要是非体育竞技类的街头格斗版西洋拳击（包含一定的腿法在内），队长虽然会被枪械所伤，
        但是其异于常人的体格会把对普通人来说致命的子弹并不会造成致命伤，虽然会流血，但对队长的行动影响并不大，就像我们摔倒擦破皮一样，拥有超乎常人的自愈能力，并且不会感到疲惫。\n\n
        美国队长原本没有超能力，是个瘦弱的年轻人，借由超级士兵血清刺激其人体潜能，使之转化为“完美”的姿态。因此美国队长具有高度的智能、常人远所不及的力量、敏捷、敏锐度、体格。他能够在没有任何辅助的状态下卧推1200磅（545kg）的重量。\n\n
        血清也强化了他的新陈代谢机能、能够将肌肉中的乳酸等有造成疲劳的物质完全代谢掉，这赐给了他正常人完全无法想像的耐久力，在不到一分钟的时间内跑完1英里（每秒26.6米）等，最高时速可高达48公里。
        也正是因此，使他能够以假死状态被冰封了数十年后复生。美国队长的体细胞对酒精和毒素免疫，不会喝醉，对于绝大多数的疾病也具有免疫力，且血清也使他延缓老化。\n\n
        “Streets of Poison”这集故事中，确认了罗杰斯的肉体会规律性自动分泌超级士兵血清。\n\n
        精神方面，罗杰斯丰富的战斗经验将他训练成了一个高明的战术家，以及优秀的战场指挥官，队友们在战斗中往往都会听从他的指挥。罗杰斯的反射神经与感觉器官都十分的敏锐，这使得他能够毫无阻碍的习得各种武艺（拳击、柔术、合气道、柔道），
        并靠着他超人的运动能力在实战中视战术需要随意组合成为一种高度洗练的战斗风格，也可使他的灵活度足以闪躲子弹。\n\n
        在混战中他最能够发挥实力，就算遇上强敌，依然能够将之击败。就算是在“惊奇漫画”的世界中，他也始终被公认是宇宙中众多超级英雄里最强的近身战高手。此外他曾多次持有雷神的雷神之锤，证明了他拥有着高洁的品格。\n\n
        也由于罗杰斯对美军无比熟悉，因此他能够对美国国防部高度机密的作战方案给予详细的建议。身为世界上最有名的超级英雄的一员，也使得他能够在广泛的社交活动中进行间谍工作，也与神盾局（S.H.I.E.L.D.）保持着联系。
        另外他在广告艺术、画漫画、教育（高中历史）、执法机关等方面也都有相当成就。
    </string>
    <string name="black_widow_intro">
        黑寡妇（Black Widow）是美国漫威漫画旗下的超级英雄，初次登场于《悬疑故事》第52期（1964年4月），由编辑斯坦·李、编剧唐·里克以及漫画家唐·赫克联合创造。本名娜塔莉亚·爱丽安诺芙娜·罗曼诺娃，也被称为娜塔莎·罗曼诺夫。\n\n
        1928年出生于前苏联斯大林格勒，自幼被苏联特工人员训练成特工，身体经苏联政府在秘密设施“红房”改造后大大延缓了其衰老速度，并增强其免疫系统和抗击打能力，
        加上各种体能及精神上的训练，自身已经成为犹如致命的毒蜘蛛“黑寡妇”，后背叛前苏联特工组织“红房”，加入复仇者联盟，其年龄仅比美国队长小8岁。
    </string>
    <string name="black_widow_power">
        娜塔莎是一个世界级的运动员、体操运动员、杂技演员以及高空杂技演员，她能够做大量复杂的动作。她的敏捷性堪比奥运会金牌得主，她也可以协调身体平衡和灵活性。\n\n
        她也是一名专家级的武术家(包括空手道、柔道、“肯波”流空手道Kenpo）、忍术、合气道、法国式拳击以及各种风格的功夫)、射手和武器专家。她接受过广泛的间谍训练，也是一名成功的芭蕾舞演员。\n\n
        在接受基因改造实验后，她的衰老速度大大减小，免疫力增加，她身体体内的白细胞可以有效地抑制微生物、细菌进入体内，使她的发病率大大减小。\n\n
        黑寡妇具有得天独厚的智力，她具有不可思议的亲和力，可以掩饰自己的真情实感。娜塔莎可以像美国队长一样，拥有快速处理多个信息流（如威胁评估）的能力，并能迅速应对不断变化的战术情况。\n\n
        娜塔莎是一个战术专家，她是一个非常高效的战略家，战术家和指挥官，她甚至还领导过一次神盾局。
    </string>
    <string name="hulk_intro">
        浩克（Hulk）是美国漫威漫画旗下的超级英雄，初次登场于《不可思议的浩克》（The Incredible Hulk）第一期（1962年5月），由斯坦·李和杰克·科比联合创造。本名罗伯特·布鲁斯·班纳（Robert Bruce Banner），
        是世界著名的物理学家，在一次意外中被自己制造出的伽马炸弹（Gamma Bomb）的放射线大量辐射，身体产生异变，后每当他情绪激动心跳加速的时候就会变成名为浩克的绿色怪物。由于变身后往往不受控制，所以为了不伤害身边的人，
        班纳游走于世界各地寻找控制愤怒的方法，即便如此班纳的浩克身份还是时常会造成毁灭性的破坏，因此常成为警方与有关单位追捕的对象。\n\n
        因为大陆方面观众有需要商业效应的传统，所以中文译名常称浩克为绿巨人。浩克皮肤的主要颜色是绿色。在过去四十年中，浩克几乎与漫威漫画中每一个英雄和反派交战过。
    </string>
    <string name="hulk_power">
        常态的浩克拥有超人的力量、速度、精力和耐力。他的能力与他的情绪相关，通常是越愤怒越强大。\n\n
        纯肉身力量能够轻而易举的举起一座山脉（一亿五千万吨），全身皮肤可抗物理、冷兵器、子弹射击和炸弹爆炸等攻击。浩克也拥有异常发达的腿部肌肉，拥有跳跃星球的能力。速度是超音速的几百倍。
        他也可以通过拍打双掌制造冲击波，威力巨大。也愤怒力量速度等会越强，当浩克的愤怒到达极致就会无限变强。\n\n
        浩克体内腺体所分泌的"oxygenated perfluorocarbon emulsion"能增加肺部的压力、并在各深度的水下呼吸和快速移动。\n\n
        浩克拥有超强的再生能力，重要器官被破坏或摧毁都能再生。他也对所有疾病、毒药免疫，可在极端温度下生存。看见灵体；有放射线吸收能力；可以变形；有极高心灵控制防御力；有星球级别的跳跃力。
    </string>
    <string name="hawkeye_intro">
        鹰眼（Hawkeye）是美国漫威漫画旗下的超级英雄，初次登场于《悬疑故事》（Tales of Suspense）第57期（1964年9月），由斯坦·李和唐·海克联合创造。本名克林顿·弗朗西斯·巴顿（Clinton Francis Barton），小名克林特（Clint），
        曾化名为歌利亚（Goliath）与浪人（Ronin），是个在马戏团长大的孤儿，师从剑客（Swordsman）和捷射（Trick Shot），天赋异常，小时候便获得“鹰眼“和“世界最佳狙击手”的称号，因在某次演出时看到钢铁侠救人的一幕后，
        决定利用自己的能力成为超级英雄，后加入复仇者联盟，成为其中重要的一员。
    </string>
    <string name="hawkeye_power">
        聪明智慧：他遇到了一个门，只能被第40年的第40天的下午4:44的阳光打开。鹰眼计算好了如何射出一支光箭，可以发出相同精确的光线打开门。\n\n
        神射手：鹰眼本身没有任何超能力，但超强的反应能力和手眼协调性，使他成为地球上已知最强的弓箭手之一，除了弓箭以外，他还精通飞刀、飞镖等武器使用。同时他也是一位才华横溢的武器设计师，
        精通改装箭头、飞刀、飞镖等武器。在《鹰眼》第一期里，他向迎面而来的汽车挡风玻璃上扔了一枚硬币，将玻璃击碎，迫使车离开。还有一次，鹰眼扔出一张纸牌，纸牌穿过整个房间，击中了敌人的喉咙。甚至有一次他用牙签打败了对手。\n\n
        超级力量：鹰眼曾经显示出不可思议的强大力量。专业人类弓箭手的弓一般是75磅的，这已经需要很大的力量拉开了，然而在《鹰眼》第一期里，一位反派发现鹰眼的弓是250磅的，更别说鹰眼使用起来很轻松了。
        2010年的《新复仇者》第五期里，鹰眼甚至直接自己单手抬起了一辆出租车。\n\n
        超级速度：在这个人人至少都会用枪的时代，依旧在射箭的鹰眼速度惊人，几秒内就能射出很多支箭，包括取箭、搭箭、拉弓、射出一系列的动作，并且在这样的速度下他依旧可以精确瞄准目标。
        他移动的速度甚至可以躲避子弹，同时也拥有一件可抵抗常规攻击的战服。\n\n
        灵敏感官：在《暮狼寻乡》的世界中，鹰眼患上青光眼，双目近乎失明，但是这并没有妨碍这位神射手的技术，鹰眼除了过人的视力外，他的其他感官同样优秀，不论是听音辨位还是通过空气的流动判断敌人的动作，鹰眼都十分拿手。\n\n
        双眼改造：鹰眼的双目之所以如此致命，是因为鹰眼的双目接受了政府的实验性视力手术，使鹰眼的眼睛能适应各种环境，不论是阳光、黑暗还是迷雾，鹰眼都能看的清清楚楚。
        但是这项手术有一个致命的弱点，那就是鹰眼的眼睛在一种特殊的光线照射下会暂时失明，然而这种光束对普通人来说却毫无作用。\n\n
        远视眼：他在一定距离以外看得更清楚。正常人自然是离得近看得更清楚一些。\n\n
        免疫心灵控制：由于在《复仇者联盟1》中鹰眼被洛基洗脑，纽约之战后，鹰眼就进行了秘密特训，防止悲剧的再次发生，在《复仇者联盟2》中，面对绯红女巫的洗脑，鹰眼完全免疫，并且成功将其他成员从幻觉中拉了出来。
    </string>
    <string name="thor_intro">
        雷神托尔（Thor）是美国漫威漫画旗下的超级英雄，初次登场于《神秘之旅》（Journey into Mystery）第83期（1962年8月），由斯坦·李、杰克·科比和拉里·利伯联合创造。本名托尔·奥丁森（Thor Odinson），
        是北欧神话中负责掌管战争与农业的雷神，也是众神之父奥丁的长子。他与好友钢铁侠的对比，突显了神话和科学的差别。他的著名武器为姆乔尔尼尔（Mjolnir），是雷神之锤（Thor’s Hammer）的意思。\n\n
        曾有一段时间，雷神托尔不再拥有使用雷神之锤的资格，取而代之的是他的前女友简·福斯特，成为全新雷神。托尔现在是以奥丁之子（Odinson）的名号而战，手握以前名唤“战彪”的战斧，断了一只手臂并用乌鲁手臂代替。
        在与超越神族的大战中，奥丁之子与亥伯龙一起壮烈赴死。\n\n
        在2017年最新的漫画《丧失神格者：托尔》（The Unworthy Thor）中，全新全异宇宙的雷神驾着自己的山羊回归。
    </string>
    <string name="thor_power">
        和其他仙宫诸神一样，托尔较凡人更为高大，并且身体密度为凡人的三倍，因此具有更强的抗击打能力，并且对病毒、辐射、毒气等攻击免疫。托尔有大地母神弗丽嘉的血统，因此比其他的仙宫诸神更为强壮。他具有超凡的力量和速度，
        并且可以长时间地战斗而不感到疲劳。他可以不携带任何装备而自由进入深海和太空。可抵挡巨大的爆炸、撞击、华氏9000度的超高温及绝对零度之上的低温，并可抵抗魔法.地球上的武器几乎无法伤其分毫，托尔是漫威里屈指可数的强大角色。
        大多数时候，托尔在地球战斗时收敛自己的力量，以免对地球造成过大的破坏。 托尔能够使用雷神之锤，在转动雷神之锤后飞行。他亦可用雷神之锤操纵天气和与风暴相关的一切元素（雷电、风雨和雪）。\n\n
        拥有超人（超越人类）的力量、速度、 耐力，寿命和感官（感知速度可超越光速、可听到其他星球上的声音）。\n\n
        时间旅行。\n\n
        操纵天气。\n\n
        能操纵雷电。\n\n
        飞行。
    </string>
    <string name="war_machine_intro">
        战争机器（War Machine）是美国漫威漫画旗下的超级英雄，初次登场于《钢铁侠》（Iron Man）第118期（1979年1月）。本名詹姆斯·罗德斯（James Rhodes），是钢铁侠托尼·史塔克的好友、一名美军上校，
        也是美国陆军武器开发部的部长，还是史塔克工业与美国军队的中间人，因一次敌人来袭，钢铁侠完全不敌，在万分危急的时刻，詹姆斯穿上了钢铁侠的另一套高科技装甲，与其一同将敌人击退，因此托尼将此装甲送给了他，
        后詹姆斯在美国政府的协助下将此装甲的攻击系统加以改进，并穿上了它，从此化身战争机器，与钢铁侠并肩作战，后加入复仇者联盟。\n\n
        在2016年大事件“内战2”中，作为惊奇队长（前惊奇女士）恋人的战争机器被灭霸杀害。他的死也导致了钢铁侠和惊奇队长矛盾的激发，从而开始了第二次“内战”。
    </string>
    <string name="war_machine_power">
        詹姆斯·罗德斯在美国海军陆战队服役期间接受了飞行员和航空工程训练，他了解飞行运行、维修技术，还可以操作斯塔克企业的各种飞机。罗德斯接受过许多武器训练，是一个经验丰富的战斗员。
        除了作为一个飞行员、工程师、军人以及商人，罗德斯获得了多个拥有不同功能的高科技盔甲，由史塔克工业制造。罗德斯精通使用钢铁侠盔甲，他的盔甲多数以物理攻击为主。\n\n
        罗德斯的盔甲具有钢铁侠盔甲的大部分能力，装甲使他拥有超人的力量，能举起超100吨重物。他也拥有超强的速度，最高能以约2450公里每小时（2马赫）的速度飞行。
        战争机器装甲也可以吸收辐射和其它能量，并且可以通过发射器释放。\n\n
        战争机器的装甲装备有各种各样的武器，其中包括电弧脉冲炮（通常装备在装甲手掌），能对抗物理和能量攻击。他的装甲也配备集束炮、声波、
        闪光弹、燃烧弹、榴弹、 微型导弹、导弹、迷你枪、加特林机枪、特制大炮、磁场、电磁脉冲、激光和伸缩钢刀等众多武器。\n\n
        战争机器装甲配有特殊涂层的抗雷达探测和定位锁，以及运动传感器和其他传感器。装甲也包含生命维持系统，其中包括一小时的空气供给，在低氧、水下或太空等需要封闭装甲的环境下能正常活动。
    </string>
    <string name="vision_intro">
        幻视（Vision）是美国漫威漫画旗下的超级英雄，初次登场于《复仇者联盟》（Avengers）第57期 （1968年10月），是奥创为了对付复仇者联盟，将二战英雄初代霹雳火的身体改造，并用神力人的脑波将之激活而成的生化人。
        在之后与复仇者的多次战斗中，幻视被复仇者成员之间的人性所感动，从而背叛奥创加入复仇者联盟，并且遇到了同为复仇者成员的绯红女巫，两人坠入爱河结为夫妻。\n\n
        在漫威电影宇宙中改编为是钢铁侠设计的人工智能管家“贾维斯”注入奥创打造的振金身体，最后成为幻视（注：成为幻视后意识已经不是贾维斯，而自我产生了一个新的意识）。
    </string>
    <string name="vision_power">
        幻视可以控制自身的身体密度，这使的他可以坚硬得如同钻石一般，也可以虚化穿越物体，他头部的宝石(或者说能量灯)可以发射高强度光线，其光线温度高达30000度，在《复仇者联盟二》中他的光线和钢铁侠的聚能光束以及雷神的雷电甚至融化了振金。
    </string>
    <string name="scarlet_witch_intro">
        绯红女巫（Scarlet Witch）是美国漫威漫画旗下的超级英雄，初次登场于《X战警》（The X-Men）第4期（1964年3月），由编剧斯坦·李和画家杰克·科比联合创造。本名旺达·姜戈·马克西莫夫（Wanda Django Maximoff），
        她的起源故事版本众多，漫画中最新剧情是由吉普赛人姜戈和玛丽所生，小时候和双胞胎弟弟快银（比绯红女巫晚出生30秒）一起被高进化者（High Evolutionary）绑架当做实验对象，从而获得了混沌魔法（创造和湮灭物质）和修改概率的能力，
        后来二人被骗，听信了自己是万磁王的孩子，母亲抛弃了他们，接生的牛头女士把他们交给了吉普赛人夫妇的这个说法。还和弟弟共同加入万磁王领导的变种人兄弟会。后得知真相改邪归正，加入复仇者联盟。并且遇到了同为复仇者成员的幻视，
        于是两人坠入爱河结为夫妻。\n\n
        在电影《复仇者联盟2：奥创纪元》中改编为是快银的双胞胎妹妹（比快银晚出生12分钟），因与哥哥参与九头蛇的秘密试验并被洛基权杖上的宝石赋予超能力，在打败奥创后加入复仇者联盟。
    </string>
    <string name="scarlet_witch_power">
        混沌魔法：\n
        绯红女巫的主要能力是使用混沌魔法，这项能力是她在出生时由魔王Chthon（被封印在万达格山）给予的。Chthon原本打算在旺达成人后利用她的能力为自己服务，但这项计划被复仇者所阻止。
        她的修改概率的变种能力混合着混沌魔法的使用，能达到修改现实的效果。\n\n
        绯红女巫的能力不完全受她的意识操控，甚至在奇异博士用阿戈摩托之眼使她失去意识后仍能使用。不仅如此，至尊法师和X教授合力都无法抑制她的能力。旺达甚至能凭空制造一个军队或是将Wonder Man从另一个维度复活。\n\n
        在HOM时期，她的能力没有限制——凭自己意愿随意改变现实，并且结果是永久性的；旺达可以在一念之间消除她所创造的虚幻实体（包括她的两个孩子Veranke, Clint Barton和Nuke）；
        她也能消除地球上98%的变种人体内天神组所留下的变种基因。奇异博士曾和野兽说旺达的魔法已经复杂到将魔法本身和现实融合在一起，如果他要解咒，就会使现实一同爆裂；
        旺达的魔法也可影响到平行世界，由此可推断出她有足够能力影响多元宇宙，这是单体宇宙神大多所不能及的。\n\n
        此外，在"What If Scarlet Witch Ended the House of M event by saying No More Powers?（假如绯红女巫在HOM最后说不会再有超能力者？）"中, 旺达的表现更是逆天：将地球上所有超能力者的能力都剥去，
        包括了至尊法师的魔法能力，基于宇宙射线照射而获得能力的神奇四侠，变种人的各种能力，通过血清获得能力的美国队长，通过伽马射线照射获得能力的绿巨人，甚至是在地球上的斯库鲁人和在月球上所有包括黑蝠王在内的异人族。
        旺达也能治疗他人的伤病，如X教授的腿伤。主世界的旺达也被视为现实的结点，同Merlin, Sise-Neg, Kang the Conqueror 和Leonard Tippit; Franklin Richards, Vision, Jean Grey/Phoenix和Odin一样（后四个来自平行世界）。\n\n
        魔法球:\n
        最初，绯红女巫操纵概率是通过使用魔法球或是六角型魔法物体。这种施法方式的有效时间很短，也局限于她的视线，需要不断变换手势并且需要精神高度集中。早期，这些魔法物不受她的控制，并会自动爆炸，
        而施咒的结果只会给目标带来“坏运气”。在她完全掌握她的能力后，她能自主地使用能力，而最终的施法效应也不局限于负面影响。\n\n
        她能够点燃物体，在特定的空间填充或消除空气，扭曲物体，使高速飞行的子弹静止，开门，引爆物体，制造能量力场，偏转魔法攻击，加速或减缓物质的腐坏，漂浮物体等。在她和复仇者在黑暗维度为了获得Avalon\'s Evil Eye对抗鬼面骑士时，
        她显现了更大的潜力——使他的能量和Avalon\'s Evil Eye 瓦解。在使用这一能力时的身体与精神状态也决定了这能力的有效程度。 她还能改变分子结构，物质形态，改变物理法则，还能释放或是消除能量。
        使是她成为个别奥创所惧怕的复仇者之一——奥创的埃德曼外壳不能抵御魔法攻击。她也可消除Longshot和Domino的操纵概率的能力，一次，她把Longshot变成了一只猫。\n\n
        飞行:\n
        旺达在精神崩溃前就显现此能力，此能力的上限未知。
    </string>
    <string name="sex">性别</string>
    <string name="species">种类</string>
    <string name="introduction">介绍</string>
    <string name="power">能力</string>
    <string name="agent_info">特工信息</string>
</resources>